# NotionStudiesAgent

./: .gitignore  pyproject.toml
notion_studies/: agent.py  notion_tool.py
notion_studies/agents/: aggregator_agent.py  decision_agent.py  parallel_agent.py  recipe_checker.py  recipe_file_creator.py  recipe_researcher.py  recipe_writer.py  sequential_agent.py
