[project]
name = "notionstudiesagent"
version = "0.1.0"
description = ""
authors = [
    {name = "Eduardo Cordeiro da Camara",email = "eduardo.camara@icomp.ufam.edu.br"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "google-adk (>=1.25.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
